# backend/pkg/routes/v2_routes.go
@@ -23,6 +23,7 @@ func V2Routes(a *fiber.App) {
 	v2.Patch("/studio/lineups/:lineup_id/groups/:group_id/position", controllers.V2MoveStudioGroup)
 	v2.Post("/studio/lineups/:lineup_id/source-groups/:source_group_id/copy", controllers.V2CopySourceGroupToLineup)
 	v2.Get("/studio/source-groups", controllers.V2StudioSourceGroups)
+	v2.Patch("/studio/source-groups/:source_group_id/enabled", controllers.V2SetStudioSourceGroupEnabled)
 	v2.Patch("/studio/groups/:group_id", controllers.V2UpdateStudioGroup)
 	v2.Delete("/studio/groups/:group_id", controllers.V2DeleteStudioGroup)
 	v2.Put("/studio/groups/:group_id/source-link", controllers.V2SetStudioGroupSourceLink)
